DiD S3: updated dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -10,14 +10,18 @@
 
     {UNDERGROUND}
 
-    {SCENARIO_MUSIC       knalgan_theme.ogg}
+    {SCENARIO_MUSIC       the_deep_path.ogg}
     {EXTRA_SCENARIO_MUSIC underground.ogg}
-    {EXTRA_SCENARIO_MUSIC legends_of_the_north.ogg}
+    {EXTRA_SCENARIO_MUSIC knalgan_theme.ogg}
 
     [story]
         [part]
-            music=the_deep_path.ogg
-            story=_ "Malin and Darken Volk spend the summer and fall traveling up and down the lower Northlands. They attack small goblin villages and orc camps when they find them. Malin’s power grows considerably under the constant tutelage of the necromancer."
+            music=transience.ogg
+            story=_ "Malin and Darken Volk spend the summer and fall traveling across the lower Northlands. They attack goblin villages and small orc camps when they find them. Although Darken Volk is occasionally demanding and irritable, he proves to be an effective mentor. Malin’s power grows considerably under the necromancer’s tutelage."
+            {STORYTXT_BACKGROUND travel.jpg}
+        [/part]
+        [part]
+            story=_ "The colored patchwork of fall eventually fades to ashen winter. The first flakes of snowfall drift over the barren lands as the air grows ever colder. The nights grow longer as the sun disappears behind a seemingly perpetual mist of pallid clouds. Hounded by the elements, the two necromancers retreat into the hills to seek shelter."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -28,7 +32,7 @@
     [side]
         side=1
         controller=human
-        recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul
+        recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul,Skeleton,Skeleton Archer
         gold=150
         team_name=good
         user_team_name= _ "Malin Keshar"
@@ -185,7 +189,40 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Winter comes on fast, and we need a sheltered place to spend it. This cave looks promising, but from the tracks in and out several bands of outlaws already inhabit it. You should clear them out so we may use it safely."
+            message= _ "Winter comes on quickly and unlike the undead, we will need shelter if we wish to survive. This cave looks promising, but many tracks travel in and out of the entrance. It would seem that this cavern is already inhabited, probably by handits. You should... clear them out so that we may use this cave safely."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "At last, something more than mere cannon fodder for me to test my abilities on."
+        [/message]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "This should be an easy task for you. The sooner you clear the caves, the sooner we can continue with your training."
+        [/message]
+    [/event]
+
+    [event]
+        name=recruit
+        first_time_only=yes
+        [filter]
+            type=Skeleton,Skeleton Archer
+        [/filter]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "It seems that raising skeletons is already a trivial matter for you now. You are indeed... talented."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "Perhaps, but I will need more than a few skeletons to fight the orcs."
+        [/message]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "They will come in time, when you learn to control more of them at once."
         [/message]
     [/event]
 
@@ -199,7 +236,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "Be careful when imprisoning a soul and use all your might to retain control over it or it might attempt to break free and destroy you!"
+            message= _ "Controlling spirits can be somewhat haphazard even for experienced necromancers. When imprisoning a soul, use all your might to retain control over it. You must exert your will over its own, or the spirit will break free and destroy you."
         [/message]
 
         [message]
@@ -219,7 +256,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Dwarves! They have often been our allies against the orc hordes. Surely they will allow us to winter with them."
+            message= _ "Dwarves! They have often been our allies against the orc hordes. Surely they will allow us to weather the winter with them."
         [/message]
 
         [scroll_to]
@@ -228,17 +265,27 @@
 
         [message]
             speaker=unit
-            message= _ "Two necromancers are at the cave entrance! Up yer axes, boys, if ye dinna’ want tae be a walking pile o’ bones."
+            message= _ "Two necromancers be at t’e cave entrance! Up yer axes, boys, if ye dinna’ want tae be a walking pile o’ bones."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "Or not. Why do they hate us so much?"
+            message= _ "Or not. We only wish to help, yet no matter where we go, we are met with hatred!"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "People fear that which they don’t understand, and death, after all, is the greatest mystery. Those who dare to investigate that mystery are bound to invoke fear and distrust. Worry not, your people will again warm to you once you deal with the orc threat at its source. For now, the cave-dwellers give us no choice."
+            message= _ "People fear that which they cannot comprehend. For the common man, death is the greatest mystery and the most primal fear. Those like us who seek to master it are far beyond the understanding of regular mortals and need not concern ourselves with their inane prejudices."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "But, my people..."
+        [/message]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "Worry not, ordinary humans are trivial to... manipulate. Your people will warm to your newfound power once they see how it exterminates the orc menace. For now, however, these cave-dwellers give us no choice."
         [/message]
     [/event]
 
@@ -273,22 +320,22 @@
 
         [message]
             side=4
-            message=_ "Free! Your foul spells cannot enslave me any longer, Malin the Damned. You shall pay for keeping me from my final rest!"
+            message=_ "Freedom! Your dark sorceries shall not shackle me any longer, Malin the Damned. You have kept me from my final rest, so now I shall send you to yours!"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message=_ "Fool boy! Your will must be stronger or you will never be able to control your soldiers well enough to face the orcs. Many are the young necromancers who have died when their servants turned on them. He will attack you relentlessly."
+            message=_ "Fool boy! You have let your concentration falter and now your thrall has turned on you! Let your will slip further and you will join the many other young necromancers who have died at the hands of their own servants."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message=_ "But why are they attacking me? And what should I do?!"
+            message=_ "My will is strong, but he still does not return to me. What should I do?!"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message=_ "Destroy the rebel quickly and all will be well. Wait, and he will begin to turn the rest of your forces against you."
+            message=_ "Your fledgling power is not yet strong enough to enslave him again. Destroy the rebel quickly, or he will turn the rest of your forces against you."
         [/message]
     [/event]
 
@@ -329,6 +376,19 @@
         [/message]
     [/event]
 
+    [event]
+        name=die
+        [filter]
+            id=Dap Horner
+        [/filter]
+
+        [message]
+            speaker=Malin Keshar
+            # po: stonehead here is used to mean fool or idiot
+            message= _ "You brought this upon yourself, stonehead dwarf."
+        [/message]
+    [/event]
+
     # Victory Condition
     [event]
         name=enemies defeated
@@ -342,6 +402,11 @@
 
     [event]
         name=victory
+
+        [message]
+            speaker=Darken Volk
+            message= _ "The caves are clear and now, we even have a fresh supply of souls and bodies. Come, we have work to do."
+        [/message]
 
         {CLEAR_VARIABLE free_ghost_turn,ghost_was_freed}
     [/event]
