DW S12: fix SUF
regression from yesterday

--- a/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
+++ b/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
@@ -809,7 +809,7 @@
             [and]
                 race=bats
                 [or]
-                    variation=bat
+                    id=Undead Bat
                 [/or]
             [/and]
         [/filter]
@@ -850,7 +850,7 @@
             [not]
                 race=bats,monster
                 [or]
-                    variation=bat
+                    id=Undead Bat
                 [/or]
             [/not]
         [/filter]
