DW 12: remove bat event after the necklace has been picked up
and switch to boolean variable

--- a/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
+++ b/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
@@ -881,9 +881,12 @@
                 [command]
                     {ANKH_NECKLACE 14 11 necklace1}
                     [set_variable]
-                        name=get_necklace
-                        value=done
+                        name=got_necklace
+                        value=yes
                     [/set_variable]
+                    [remove_event]
+                        id=bat_necklace_is_bad
+                    [/remove_event]
                 [/command]
             [/option]
             [option]
@@ -915,8 +918,8 @@
                         [/filter]
                         [filter_condition]
                             [variable]
-                                name=get_necklace
-                                not_equals=done
+                                name=got_necklace
+                                boolean_equals=no
                             [/variable]
                         [/filter_condition]
 
@@ -927,9 +930,12 @@
                                 [command]
                                     {ANKH_NECKLACE 14 11 necklace1}
                                     [set_variable]
-                                        name=get_necklace
-                                        value=done
+                                        name=got_necklace
+                                        value=yes
                                     [/set_variable]
+                                    [remove_event]
+                                        id=bat_necklace_is_bad
+                                    [/remove_event]
                                 [/command]
                             [/option]
                             [option]
@@ -943,5 +949,11 @@
                 [/command]
             [/option]
         [/message]
+    [/event]
+
+    [event]
+        name=victory
+
+        {CLEAR_VARIABLE got_necklace}
     [/event]
 [/scenario]
