EI: make the way out obvious
… also adds a door to the chamber fixes the validation

--- a/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
+++ b/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
@@ -288,7 +288,7 @@
         [/remove_shroud]
         [remove_shroud]
             side=1
-            x,y=31-36,4-10
+            x,y=31-37,4-11
         [/remove_shroud]
         [remove_shroud]
             side=1
@@ -343,6 +343,25 @@
 
     {HOLY_AMULET 12 2}
 
+    # opening the door to the treasure room
+    [event]
+        name=moveto
+        [filter]
+            x=30,32
+            y=9,10
+        [/filter]
+
+        [sound]
+            name=club.ogg
+        [/sound]
+        [terrain]
+            x=31
+            y=10
+            terrain=^Pw/o
+            layer=overlay
+        [/terrain]
+    [/event]
+
     [event]
         name=moveto
         [filter]
@@ -395,11 +414,15 @@
 
         [remove_shroud]
             side=1
-            x,y=2-4,2-3
+            x,y=3,3
+            radius=1
         [/remove_shroud]
         [lift_fog]
-            side=1
-            x,y=2-4,2-3
+            [filter_side]
+                side=1
+            [/filter_side]
+            x,y=3,3
+            radius=1
         [/lift_fog]
 
         [modify_side]
