DiD S4: updated dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -10,19 +10,19 @@
 
     {DEFAULT_SCHEDULE}
 
-    {SCENARIO_MUSIC       vengeful.ogg}
-    {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
-    {EXTRA_SCENARIO_MUSIC knalgan_theme.ogg}
+    {SCENARIO_MUSIC       the_city_falls.ogg}
+    {EXTRA_SCENARIO_MUSIC casualties_of_war.ogg}
+    {EXTRA_SCENARIO_MUSIC vengeful.ogg}
     {EXTRA_SCENARIO_MUSIC northerners.ogg}
 
     [story]
         [part]
-            music=revelation.ogg
-            story= _ "Burning inside with a desire to take his revenge against the orcs and push them further north, Malin spends the winter learning as much from Darken Volk as he can. His years of study with the mages serve him well, and his power grows quickly."
+            music=underground.ogg
+            story= _ "Weeks pass in the cold, bare caverns. There is little light and little food, but Malin’s burning desire for vengeance sustains him through his training. As the grip of black magic grows stronger, so does his control of the undead. He finds it to be a mastery of a different sort than what he learned on the Isle of Alduin. The magic reaches out to him as it never has before; he <i>feels</i> it, the flows of energy, ebony power streaming through his soul. He listens and it speaks back—he senses its will and lets it guide him—he embraces the dark magic as an extension of himself more than a simple tool."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story= _ "When spring comes, the two head north to a mountain pass known to Darken Volk. In the higher reaches the snow is just beginning to melt, making the passage treacherous. The elder necromancer insists that they press on. He says that he hopes to catch the orc fighters unprepared by arriving early in the year, thereby inflicting as much damage as possible."
+            story= _ "When spring comes, Darken Volk leads Malin toward the jagged mountain peaks in the north. In the higher reaches, snow begins to melt into rivulets of water, streaming downward and fracturing the surface of the ice that blankets the river Listra. Though the unstable terrain is hazardous to traverse, the elder necromancer insists that they press on, saying that he hopes to catch the orc fighters unprepared by arriving early in the year."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -189,12 +189,22 @@ end
 
         [message]
             speaker=Darken Volk
-            message= _ "Orcs block the way out of the mountain pass. Destroy them, and we will move on to bigger targets."
+            message= _ "Across this pass lies the eastern edge of the Heart Mountains proper. For their distinctive shape, the orcs call these the ‘Whitefang’ Mountains, which is also the namesake of the dominant clan in this region. They are the very same who... killed your father."
         [/message]
 
         [message]
             speaker=Malin Keshar
-            message= _ "With the might of the undead at my command, many orcs will die this day. They shall pay for attacking Parthyn."
+            message= _ "The Whitefang orcs... so that is their name."
+        [/message]
+
+        [message]
+            speaker=Darken Volk
+            message= _ "To reach them, we must first destroy the orcs who block our way out of the mountain pass. Then, we can move on to our main target."
+        [/message]
+
+        [message]
+            speaker=Malin Keshar
+            message= _ "I have anticipated this day for a long time. At last, we shall have revenge."
         [/message]
     [/event]
 
@@ -368,6 +378,11 @@ end
 
     [event]
         name=victory
+
+        [message]
+            speaker=Malin Keshar
+            message=_ "It’s time to hunt some orcs."
+        [/message]
 
         {CLEAR_VARIABLE weakened_ice}
     [/event]
