fix the typo FITER_TEXT_BOX_HINT

--- a/data/gui/window/game_load.cfg
+++ b/data/gui/window/game_load.cfg
@@ -419,7 +419,7 @@
 											[text_box]
 												id = "txtFilter"
 												definition = "default"
-												{FITER_TEXT_BOX_HINT}
+												{FILTER_TEXT_BOX_HINT}
 											[/text_box]
 
 										[/column]
