--- a/data/gui/window/lobby_main.cfg
+++ b/data/gui/window/lobby_main.cfg
@@ -323,7 +323,7 @@
 				[text_box]
 					definition = "default"
 					id = "filter_text"
-					{FITER_TEXT_BOX_HINT}
+					{FILTER_TEXT_BOX_HINT}
 				[/text_box]
 			[/column]
 
