--- a/data/gui/window/mp_create_game.cfg
+++ b/data/gui/window/mp_create_game.cfg
@@ -652,7 +652,7 @@
 			[text_box]
 				id = "game_filter"
 				definition = "default"
-				{FITER_TEXT_BOX_HINT}
+				{FILTER_TEXT_BOX_HINT}
 			[/text_box]
 
 		[/column]
