--- a/data/gui/window/preferences/02_hotkeys.cfg
+++ b/data/gui/window/preferences/02_hotkeys.cfg
@@ -65,7 +65,7 @@
 							definition = "default"
 
 							tooltip = _ "Filters on hotkey description."
-							{FITER_TEXT_BOX_HINT}
+							{FILTER_TEXT_BOX_HINT}
 						[/text_box]
 					[/column]
 
