--- a/data/gui/window/unit_recruit.cfg
+++ b/data/gui/window/unit_recruit.cfg
@@ -165,7 +165,7 @@
 								[text_box]
 									id = "filter_box"
 									definition = "default"
-									{FITER_TEXT_BOX_HINT}
+									{FILTER_TEXT_BOX_HINT}
 								[/text_box]
 
 							[/column]
