--- a/data/gui/macros/_initial.cfg
+++ b/data/gui/macros/_initial.cfg
@@ -334,7 +334,7 @@
 	[/pre_commit]
 #enddef
 
-#define FITER_TEXT_BOX_HINT
+#define FILTER_TEXT_BOX_HINT
 	hint_text = _ "Search"
 	hint_image = "icons/action/zoomdefault_25.png~FL(horiz)"
 #enddef
