--- a/data/gui/window/addon_manager.cfg
+++ b/data/gui/window/addon_manager.cfg
@@ -692,7 +692,7 @@
 					definition = "default"
 
 					tooltip = _ "Filters on addon description, version, type or author."
-					{FITER_TEXT_BOX_HINT}
+					{FILTER_TEXT_BOX_HINT}
 				[/text_box]
 			[/column]
 
