DiD S5: dialogue fixes

--- a/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg
@@ -32,7 +32,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "Malin and Darken Volk continue their raids on the orcs and eventually force the usually fractious Whitefang chieftains to unite in opposition. The orcs chance the two necromancers east toward the mouth of the river men call the Longlier and Elves call the Arkan-thoria, where they manage to surround the humans and force a fight."
+            story=_ "Malin and Darken Volk continue their raids on the orcs and eventually force the usually fractious Whitefang chieftains to unite in opposition. The orcs chase the two necromancers east toward the mouth of the river men call the Longlier and Elves call the Arkan-thoria, where they manage to surround the humans and force a fight."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -218,7 +218,7 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "Since the very founding of Wesnoth you have hounded humans at every turn. You have trampled our fields, slaughtered our livestock, and burned our houses. You have brought war to a place of peace and death to a place of life. You are nothing but remorseless killers and savage beasts. Your kind deserves no mercy and shall receive none. I will crush you into the dust and make you into my slaves for all eternity."
+            message= _ "Even before the very founding of Wesnoth, you have hounded humans at every turn. You have trampled our fields, slaughtered our livestock, and burned our houses. You have brought war to a place of peace and death to a place of life. You are nothing but remorseless killers and savage beasts. Your kind deserves no mercy and shall receive none. I will crush you into the dust and make you into my slaves for all eternity."
         [/message]
 
         [message]
