Fix the typo FITER_TEXT_BOX_HINT : added compatibility definition for FILTER_TEXT_BOX_HINT

--- a/data/gui/macros/_initial.cfg
+++ b/data/gui/macros/_initial.cfg
@@ -339,6 +339,10 @@
 	hint_image = "icons/action/zoomdefault_25.png~FL(horiz)"
 #enddef
 
+#define FITER_TEXT_BOX_HINT
+	{FILTER_TEXT_BOX_HINT}
+#enddef
+
 ###############################################################################
 ###                                                                         ###
 ### Macros for the normal gui.                                              ###
