DiD S6: updated music

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -12,16 +12,15 @@
 
     {SCENARIO_MUSIC       the_city_falls.ogg}
     {EXTRA_SCENARIO_MUSIC knolls.ogg}
-    {EXTRA_SCENARIO_MUSIC elvish-theme.ogg}
+    {EXTRA_SCENARIO_MUSIC weight_of_revenge.ogg}
 
     [story]
         [part]
-            music=breaking_the_chains.ogg
+            music=northerners.ogg
             story= _ "Two days travel south of the previous battle, Malin picks up the trail of the regrouped orcish warriors. He follows them down the western bank of the river Listra, past the Whitefang Mountains. He wonders why they continue rushing toward the Great River instead of calling for reinforcements, but after a bit of thought, he realizes where the orcs are headed. It is, after all, the season when they usually raid human towns."
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
         [part]
-            music=breaking_the_chains.ogg
             story= _ "<i>‘This chieftain has no intention of warning the rest of his clan about me. I suppose he must think that I intend to attack the rest of the Whitefangs rather than pursue him this far; with the rest of his brethren occupied against me, he will be able to raid more human towns undisturbed. Selfish creature. Exactly what one would expect from an orc. I, however, know the terrain better than he does.’</i> Malin thinks carefully and quickly realizes what he should do."
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
@@ -558,7 +557,9 @@
         [filter]
             id=Drogan
         [/filter]
-
+        
+        {INCIDENTAL_MUSIC the_dangerous_symphony.ogg}
+        
         [message]
             speaker=Malin Keshar
             message= _ "See what your traitorous ways have won you, Drogan?"
@@ -626,8 +627,6 @@
                 carryover_percentage=40
             [/gold_carryover]
         [/objectives]
-
-        {INCIDENTAL_MUSIC loyalists.ogg}
 
         {PLACE_IMAGE "items/bones.png" $x1 $y1}
         {VARIABLE loc.x $x1}
