DiD S6: modified dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -21,7 +21,7 @@
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
         [part]
-            story= _ "<i>‘This chieftain has no intention of warning the rest of his clan about me. I suppose he must think that I intend to attack the rest of the Whitefangs rather than pursue him this far; with the rest of his brethren occupied against me, he will be able to raid more human towns undisturbed. Selfish creature. Exactly what one would expect from an orc. I, however, know the terrain better than he does.’</i> Malin thinks carefully and quickly realizes what he should do."
+            story= _ "<i>‘This chieftain has no intention of warning the rest of his clan about me. I suppose he must think that I intend to attack the rest of the Whitefangs rather than pursue him this far; with the rest of his brethren occupied against me, he will be able to raid more human towns undisturbed. Selfish creature. Exactly what one would expect from an orc.’</i> Malin thinks carefully and quickly realizes what he should do."
             {STORYTXT_BACKGROUND parthyn.jpg}
         [/part]
         [part]
