--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -49,19 +49,31 @@
     [story]
         [part]
             music=underground.ogg
-            story= _ "Fleeing from the city of his birth, Malin heads to the west. Soon he reunites with his teacher."
+            story= _ "Fleeing from the city of his birth, Malin escapes into the forested hills north of the Great River. Several hours west, he finally stops after several days bereft of rest or sleep. He closes his eyes, trying to purge the last few hours from his mind, but the darkness only makes the images all the more vivid. He is tired, <i>so</i> tired, but sleep does not come."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "<i>“For your final test as my apprentice, you will aid me in retrieving a book,”</i> the necromancer says. <i>“The book was... stolen from me long ago. Since it has personal value to me, think of the task as a small favor. I should warn you that it will require you to act against your countrymen of Wesnoth, since it was one of them who stole it from me.”</i>"
+            story= _ "<i>“No regrets. No regrets...”</i> He repeats it under his breath like a chant, murmuring over and over in his half-conscious state. After a while, a second voice joins, a voice that sounds very much like his own, but somehow feels foreign and alien. <i>‘There could have been another way. You might have been wrong.’</i>"
+            {STORYTXT_BACKGROUND travel.jpg}
+        [/part]
+        [part]
+            story= _ "<i>“No, no. Even if there were another way, they would have spurned me all the same. They are wrong... blind. I have no regrets about what I did. No regrets...”</i> He quells the voice. Sleep comes, long stretches of dreamless darkness punctuated briefly by nightmarish forms, distorted, grotesque things that whisper in eerily familiar voices. <i>‘You are cursed, Malin the Damned! Cursed! Cursed. Cursed...’</i> They echo over and over, first a choir of voices, then a duet, both male, then just one. One voice alone in the darkness."
+            {STORYTXT_BACKGROUND travel.jpg}
+        [/part]
+        [part]
+            story= _ "Malin wakes up to a plume of smoke rising in the east. He gives it only a brief thought before heading farther west toward Tath. Soon, he reunites with his teacher."
+            {STORYTXT_BACKGROUND travel.jpg}
+        [/part]
+        [part]
+            story=_ "<i>“For your final test as my apprentice, you will aid me in retrieving a book,”</i> the necromancer says. <i>“The book was... stolen from me long ago. It has personal value to me, so you may think of this as a small favor. However, this task will require you to act against your countrymen of Wesnoth, since it was one of them who took it from me.”</i>"
             {STORYTXT_BACKGROUND book.jpg}
         [/part]
         [part]
-            story= _ "Malin replies, <i>“They are no longer countrymen of mine, since they have rejected me twice now.”</i>"
+            story= _ "Malin replies, <i>“They are no longer countrymen of mine.”</i>"
             {STORYTXT_BACKGROUND book.jpg}
         [/part]
         [part]
-            story= _ "Darken Volk continues, <i>“Excellent. We travel, then, to the city of Tath. There is a lord of that city by the name of Karres. He was trained as a mage in his youth, and now uses his wealth to support a large number of mages in their studies. Among his library is the book we seek. We will need to break into his manor and seek the book inside.”</i>"
+            story= _ "Darken Volk continues, <i>“Excellent. There is a lord of Tath by the name of Karres. He was trained as a mage in his youth and now uses his wealth to support a large number of mages in their studies. Among his library is the book we seek. We will need to break into his manor to seek the book.”</i>"
             {STORYTXT_BACKGROUND book.jpg}
         [/part]
     [/story]
@@ -268,7 +280,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "The stolen book lies within Lord Karres’s manor on the north end of the city. We cannot defeat the entire city guard, so we must stay hidden as long as possible. The cover of the night and this fog will aid us. Once we are seen by the night watchmen, we will have to make a run for it. Our forces are not strong enough to take the whole city."
+            message= _ "The stolen book lies within Lord Karres’s manor at the north end of the city. We cannot defeat the entire city guard, so we must stay hidden as long as possible. Once we are seen by the night watchmen, we will have to make a run for it."
         [/message]
 
         [message]
@@ -297,18 +309,18 @@
             [then]
                 [message]
                     speaker=second_unit
-                    message= _ "Sir! Undead creatures are coming out of the forest! Wake the guard immediately!"
+                    message= _ "General Taylor! Undead creatures emerge from the forest!"
                 [/message]
 
                 [message]
                     speaker=Taylor
-                    message= _ "To arms, men!"
+                    message= _ "Wake the guard! To arms, men!"
                 [/message]
             [/then]
             [else]
                 [message]
                     speaker=Taylor
-                    message= _ "Undead creatures are coming out of the forest! To arms, men!"
+                    message= _ "Undead creatures emerge from the forest! To arms, men!"
                 [/message]
             [/else]
         [/if]
@@ -351,12 +363,12 @@
 
         [message]
             speaker=Malin Keshar
-            message= _ "What in the name of all demons of hell was this thing?"
+            message= _ "What was that?!"
         [/message]
 
         [message]
             speaker=Darken Volk
-            message= _ "This was the impact of what is known as holy water among common people. It is brewed in a complicated and mysterious procedure only known to a few priests and often used to fight resurrected creatures."
+            message= _ "That was the impact of what is known as holy water among common people. It is brewed in a complicated and mysterious procedure only known to a few priests. As you might imagine, it is quite effective against undead."
         [/message]
     [/event]
 
@@ -384,7 +396,7 @@
 
         [message]
             speaker=unit
-            message= _ "Here is the entrance! Hurry!"
+            message= _ "I found the entrance! Hurry!"
         [/message]
 
         [endlevel]
