--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -4,11 +4,11 @@
     id=06_Return_to_Parthyn
     name= _ "Return to Parthyn"
     map_data="{campaigns/Descent_Into_Darkness/maps/06_Return_to_Parthyn.map}"
-    {TURNS 15 14 13}
+    turns=17
     victory_when_enemies_defeated=no
     next_scenario=07_A_Small_Favor
 
-    {DEFAULT_SCHEDULE}
+    {DEFAULT_SCHEDULE_SECOND_WATCH}
 
     {SCENARIO_MUSIC       the_city_falls.ogg}
     {EXTRA_SCENARIO_MUSIC knolls.ogg}
@@ -37,7 +37,9 @@
         side=1
         controller=human
         recruit=Walking Corpse,Vampire Bat,Ghost,Ghoul,Skeleton Archer,Skeleton,Dark Adept DiD
-        {GOLD 110 100 90}
+        {GOLD 100 90 80}
+        village_gold=3
+        village_support=2
         team_name=good
         user_team_name= _ "Malin Keshar"
         {FLAG_VARIANT undead}
@@ -61,6 +63,7 @@
         recruit=Wolf Rider,Goblin Knight,Orcish Archer,Orcish Crossbowman,Orcish Grunt,Troll Whelp
 #endif
         {GOLD 90 120 150}
+        {INCOME 4 5 6}
         team_name=orcs
         user_team_name= _ "Orcs"
         {FLAG_VARIANT6 ragged}
@@ -114,8 +117,8 @@
         side=4
         controller=ai
         recruit=Spearman,Bowman,Swordsman,Pikeman,Longbowman,Thug,Poacher,Footpad
-        {GOLD 175 200 225}
-        {INCOME 15 20 25}
+        gold=15
+        {INCOME 5 10 15}
         team_name=guardsmen
         user_team_name= _ "Defenders"
         {FLAG_VARIANT loyalist}
@@ -149,7 +152,7 @@
     {STARTING_VILLAGES 4 15}
 
     # Signpost
-    {PLACE_IMAGE scenery/signpost.png 17 16}
+    {PLACE_IMAGE scenery/signpost.png 17 22}
 
 #define DID_RTP_HAS_ORC_LEADER
     [have_unit]
@@ -197,7 +200,7 @@
             [/objective]
 
             {TURNS_RUN_OUT}
-            
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
@@ -320,17 +323,17 @@
             speaker=Drogan
             message= _ "A fine tale. I find it more likely that you brought your orcish allies here with you to take your revenge upon the city. If we stand down, your undead will no doubt kill us where we stand. Watching you grow up, I never could have believed you would turn into such a traitor."
         [/message]
-        
+
         [message]
             speaker=Malin Keshar
             message= _ "Dela, you do not believe that, do you?"
         [/message]
-        
+
         [message]
             speaker=Drogan
             message= _ "Stop looking to your sister, Malin. The fact that even she rebuffs you so should tell you how much of a traitor you are."
         [/message]
-        
+
         [message]
             role=advisor
             message= _ "Master, he threatens the safety of the city by choosing to fight you."
@@ -347,10 +350,28 @@
         [/message]
     [/event]
 
+    # activate side 4 a tiny bit late or they rush the player a bit quickly
+    [event]
+        name=turn 3
+
+        [gold]
+            side=4
+            {QUANTITY amount 40 50 60}
+        [/gold]
+    [/event]
+    [event]
+        name=turn 4
+
+        [gold]
+            side=4
+            {QUANTITY amount 50 70 90}
+        [/gold]
+    [/event]
+
     # Placing the orc leader
 
     [event]
-        name=turn 4
+        name=turn 5
 
         [scroll_to]
             x,y=29,1
@@ -432,7 +453,7 @@
         name=moveto
         [filter]
             side=1
-            x,y=17,16
+            x,y=17,22
         [/filter]
 
         [message]
@@ -483,6 +504,16 @@
                 [show_objectives][/show_objectives]
             [/then]
             [else]
+                [message]
+                    speaker=narrator
+                    message= _ "The orc was carrying some gold."
+                [/message]
+
+                [gold]
+                    side=1
+                    {QUANTITY amount 60 50 40}
+                [/gold]
+
                 [endlevel]
                     result=victory
                     bonus=no
@@ -508,7 +539,7 @@
 
         [move_unit]
             id=Dela Keshar
-            to_x,to_y=1,20
+            to_x,to_y=1,25
         [/move_unit]
 
         [kill]
@@ -557,9 +588,9 @@
         [filter]
             id=Drogan
         [/filter]
-        
+
         {INCIDENTAL_MUSIC the_dangerous_symphony.ogg}
-        
+
         [message]
             speaker=Malin Keshar
             message= _ "See what your traitorous ways have won you, Drogan?"
@@ -631,7 +662,7 @@
         {PLACE_IMAGE "items/bones.png" $x1 $y1}
         {VARIABLE loc.x $x1}
         {VARIABLE loc.y $y1}
-        
+
         [event]
             name=moveto
             [filter]
@@ -645,14 +676,14 @@
                 {NEW_GOLD_CARRYOVER 40}
             [/endlevel]
         [/event]
-        
+
         [event]
             name=moveto
             [filter]
                 id=Malin Keshar
                 x,y=$loc.x,$loc.y
             [/filter]
-            
+
             [animate_unit]
                 [filter]
                     id=Malin Keshar
@@ -666,26 +697,34 @@
             [delay]
                 time=400
             [/delay]
-            
+
             {REMOVE_IMAGE $loc.x $loc.y}
-            
+
             [unit]
                 type=Ghoul
+                id=DroganGhoul
+                name= _ "Drogan"
                 x,y=$loc.x,$loc.y
                 side=1
                 animate=yes
             [/unit]
-            
+
+            [message]
+                speaker=DroganGhoul
+                # po: This is just some guttural sound that a ghoul might make since it can't actually talk
+                message= _ "Grahhhuralug..." # wmllint: no spellcheck
+            [/message]
+
             [message]
                 speaker=Malin Keshar
                 message= _ "As ugly in death as he was in life. This is proof that Drogan was evil!"
             [/message]
-            
+
             [message]
                 speaker=Dela Keshar
                 message= _ "What have you done?! Killing Drogan was not enough — you had to defile his body as well? How could you turn him into such a... a twisted, abominable thing? I cannot believe how depraved you have become!"
             [/message]
-            
+
             [message]
                 speaker=Malin Keshar
                 message= _ "What you see on the outside reflects the inside. It is an ugly truth, but it is not my fault if you cannot accept it!"
@@ -719,7 +758,7 @@
             message= _ "More orcs, and powerful ones at that! Alas, it will be impossible for me to outrun their riders..."
         [/message]
     [/event]
-    
+
     [event]
         name=victory
 
