SotA S11: Move ghost recruitment from start to victory event

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -122,17 +122,6 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
         name=start
 
         [message]
-            speaker=narrator
-            image=portraits/undead/ghost.png~SCALE(93, 93)
-            message= _ "You can now recruit ghosts!"
-        [/message]
-
-        [allow_recruit]
-            side=1
-            type=Ghost
-        [/allow_recruit]
-
-        [message]
             speaker=Blianxkep
             message= _ "The fish people gave good value for the last load. More metal of that type is desired."
         [/message]
@@ -172,6 +161,22 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
 
     [event]
         name=victory
+
+        [message]
+            speaker=Ardonna
+            message= _ "Good. Now I can practice recruiting ghosts."
+        [/message]
+
+        [message]
+            speaker=narrator
+            image=portraits/undead/ghost.png~SCALE(93, 93)
+            message= _ "You can now recruit ghosts!"
+        [/message]
+
+        [allow_recruit]
+            side=1
+            type=Ghost
+        [/allow_recruit]
 
         # Find the nearest hex to (16,4) that doesn't have unit on it:
         {NEAREST_HEX 16 4 20 (
