SotA S01: Better implementation of fences blocking the wild animals

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -12,12 +12,11 @@
 # -------------
 
 # The placement of enemies in this scenario is carefully adjusted rather than totally
-# random. That's why there are so many macro calls. Also, the enemies can't attack inside
-# a fence, and we don't want them to move through the fences on their turn. To get this
-# effect, we use a custom terrain overlay ^Fync. It *looks* just like normal fences, but
-# it is an alias of Unwalkable. On the AI's turn, we swap it in for all the fences. Then,
-# on the players turn, we turn the fences back to normal so that Ardonna can go through
-# them.
+# random. That's why there are so many macro calls. Wild animals can't pass through
+# fences. To block them, we use a custom terrain overlay (code: ^Fync). It is a copy of
+# the core fence, except that it is an alias of unwalkable. Bats are unaffected because
+# they are flying, and Ardonna gets an object that lets her go through unwalkable terrain
+# until the end of this scenario.
 
 [scenario]
     name= _ "Slipping Away"
@@ -183,6 +182,9 @@ With further observation, I have determined that this is probably not the way to
             [note]
                 description= _ "This scenario takes place entirely at night."
             [/note]
+            [note]
+                description= _ "Ardonna can climb over a fence for 2 movement points, but wild animals cannot."
+            [/note]
         [/objectives]
 
         [label]
@@ -202,6 +204,29 @@ With further observation, I have determined that this is probably not the way to
             variation=bat
             side=1
         [/unit]
+
+        # Fences are unwalkable, but not for Ardonna.
+        [object]
+            silent=yes
+            duration=scenario
+            [filter]
+                id=Ardonna
+            [/filter]
+            [effect]
+                apply_to=movement_costs
+                replace=yes
+                [movement_costs]
+                    unwalkable=2
+                [/movement_costs]
+            [/effect]
+            [effect]
+                apply_to=defense
+                replace=yes
+                [defense]
+                    unwalkable=50
+                [/defense]
+            [/effect]
+        [/object]
 
         {PLACE_WOLF 39 4 QUICK RESILIENT ai_special=guardian}
         {PLACE_WOLF 35 2 RESILIENT INTELLIGENT ai_special=guardian}
@@ -224,30 +249,6 @@ With further observation, I have determined that this is probably not the way to
     [/event]
 
     # *************************** PLAY ***************************
-    [event]
-        name=side 2 turn
-        first_time_only=no
-        [terrain]
-            [and]
-                terrain=*^Eff
-            [/and]
-            terrain=^Fync
-            layer=overlay
-        [/terrain]
-    [/event]
-
-    [event]
-        name=side 1 turn
-        first_time_only=no
-        [terrain]
-            [and]
-                terrain=*^Fync
-            [/and]
-            terrain=^Eff
-            layer=overlay
-        [/terrain]
-    [/event]
-
     [event]
         name=turn 6
         {PLACE_RAT 25 1}
