SotA S01: Make one wolf a Great Wolf on hard difficulty

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -263,8 +263,18 @@ With further observation, I have determined that this is probably not the way to
         {PLACE_WOLF 42 21 STRONG RESILIENT ()}
 #endif
 #ifdef HARD
-        {PLACE_WOLF 42 22 QUICK RESILIENT ()}
-        {PLACE_WOLF 15 1 RESILIENT INTELLIGENT ()}
+        {PLACE_WOLF 15 1 RESILIENT STRONG ()}
+        [unit]
+            type=Great Wolf
+            variation=red
+            x=42
+            y=22
+            side=2
+            [modifications]
+                {TRAIT_QUICK}
+                {TRAIT_INTELLIGENT}
+            [/modifications]
+        [/unit]
 #endif
     [/event]
 
