SotA S01: Dialog and display adjustments

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/01_Slipping_Away.cfg
@@ -319,9 +319,6 @@ With further observation, I have determined that this is probably not the way to
             message= _ "It would be good to have even more bats as well. There was a colony in that ruined castle where we practiced conjuring fire, so I will try to find that. The castle was also infested with huge rats as I remember, but I can certainly destroy those. I will have to use ice though, as I never mastered fire."
         [/message]
         {HIGHLIGHT_IMAGE 39 2 "scenery/signpost.png" ()}
-        [scroll_to_unit]
-            id=Ardonna
-        [/scroll_to_unit]
     [/event]
 
     [event]
@@ -331,7 +328,7 @@ With further observation, I have determined that this is probably not the way to
         [/filter]
         [message]
             speaker=Ardonna
-            message= _ "Wolves! This journey may be more dangerous than I thought. Well, we can find safety inside the sturdy fences built by farmers and woodcutters. The wild animals surely won't be able to enter."
+            message= _ "A wolf! This journey may be more dangerous than I thought. If we need to, I suppose we could rest inside a farmer's or woodcutter's fence."
         [/message]
     [/event]
 
