SotA S11: Dialog adjustments

--- a/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
+++ b/data/campaigns/Secrets_of_the_Ancients/scenarios/11_Battleground.cfg
@@ -151,7 +151,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
         [/message]
         [message]
             speaker=Krissaz
-            message= _ "When the mage isss dead and her sssouls put to ressst, we agree. We will have been compensssated adequately."  # no spellcheck
+            message= _ "When the mage isss dead and her dead horde put to ressst, we agree. We will have been compensssated adequately."  # no spellcheck
         [/message]
         [message]
             speaker=Ardonna
@@ -229,7 +229,7 @@ Rastaban seems like an acceptable ally. He is quite different from the stodgy te
         [/message]
         [message]
             speaker=Vendraxis
-            message= _ "I have ssstared into the darknesss between the starsss and not been intimidated by the void, but your mind holdsss a darknesss of another kind, frightening and forbidden by my clan. I sssubmit to your power. Now that I know you are female, I will find it easier as it is the way of my kind." # no spellcheck
+            message= _ "I have ssstared into the darknesss between the starsss and not been intimidated by the void, but your mind holds a darknesss of another kind, frightening and forbidden by my clan. I sssubmit to your power. Now that I know you are female, I will find it easier as it isss the way of my kind." # no spellcheck
         [/message]
         [message]
             speaker=Ardonna
